--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">KotlinFirstApp</string>
+    <string name="thumbnail_desc">Thumbnail</string>
 </resources>
